fix scrollbar position on some themes, and update readme

--- a/styles/atom-trello.less
+++ b/styles/atom-trello.less
@@ -5,6 +5,7 @@
 @import "ui-variables";
 
 .atom-trello {
+  overflow: hidden;
   #back_btn {
     margin-top: @component-padding;
     float: left;
